@@ -69,6 +69,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   is no title match in search and the user has no rights to create pages.
 * Added $wgJQueryVersion, $wgJQueryMinified and $wgJQueryOnEveryPage (true by
   default) to configure loading of jQuery by MediaWiki
+* (bug 23429) Added new hook WatchlistEditorBuildRemoveLine
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
